--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@ the game Jeopardy and the dataset I have used.</p>
   <article data-timings="">
     <p>is an American TV game show, that was first aired on NBC on March 30th, 1964. </p>
 
-<p><strong>Gameplay</strong></p>
-
 <p>Three contestents and a returning champion compete in a quiz game comprising three rounds</p>
 
 <ul>
@@ -102,7 +100,7 @@ from
 entries: </p>
 
 <pre><code class="r">library(rjson)
-json_data &lt;- fromJSON(file=&#39;/usr/users/svorber/work/scripts/data_products_shiny_quizz/app/JEOPARDY_QUESTIONS1.json&#39;)
+json_data &lt;- fromJSON(file=&#39;../app/JEOPARDY_QUESTIONS1.json&#39;)
 length(json_data)
 </code></pre>
 
